# ai-learning

./: README.md  justfile  pyproject.toml
notebooks/: Mistral-test.ipynb
notebooks/.ipynb_checkpoints/: Mistral-test-checkpoint.ipynb
scripts/: app_console.py  app_gradio.py
scripts/llm/: chat.py  model.py
