[project]
name = "ai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "sentencepiece>=0.2.1",
    "transformers>=5.2.0",
    "torch",
    "torchvision",
    "torchaudio",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "tqdm>=4.67.3",
    "ipywidgets>=8.1.8",
    "gradio>=6.6.0",
    "rich>=14.3.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
